# TennisBot

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: README.md  _config.yml  construction.md  design.md  quickshot.md  simulation.md  v1.md  v2.md  videos.md
firmware/shooter_controller/: platformio.ini  shooter_controller.ino
hardware/: BOM.xlsx  README.md
hardware/3D prints/: actuator encoder cover.stl  actuator housing.stl  actuator magnet cover.stl  actuator plate.stl  cable mount.stl  gear magnet holder.stl  idler bottom.stl  idler spacer.stl  idler top.stl  left mount.stl  power distribution board cover.stl  power distribution board.stl  shooter mid pipe.stl  shooter servo holder.stl  test board.stl  wheel holder bottom.stl  wheel holder top.stl  wheel spacer.stl
lib/quickshot/: quickshot.py
models/gazebo/tennisbot_support/: CMakeLists.txt  package.xml  urdf.rviz
models/gazebo/tennisbot_support/config/: joint_names_tennisbot_support.yaml
models/gazebo/tennisbot_support/launch/: display.launch  gazebo.launch
models/gazebo/tennisbot_support/meshes/: base_link.STL  bot_trigger_link.STL  bot_wheel_link.STL  mount_link.STL  pipe_link.STL  top_trigger_link.STL  top_wheel_link.STL
models/gazebo/tennisbot_support/urdf/: tennisbot_support.csv  tennisbot_support.urdf
models/shooter motor/: Plate.dwg
models/shooter mount/: Left Mount.stl  Right Mount.stl
models/shooter pipe/: Pipe Mid.stl
models/shooter wheel/: Pulley Bottom Holder.stl  Pulley Top Mount.stl
reports/: week-01.md  week-02.md  week-03.md  week-04.md
(+34 files in other folders)
