<package format="2">
  <name>tennisbot_support</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tennisbot_support</p>
    <p>This package contains configuration data, 3D models and launch files
for TennisBot v1 robot</p>
  </description>
  <author>Julian Ho</author>
  <maintainer email="julianho@brandeis.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>